objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <description>This is Quote object.</description>
    <label>Quote</label>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>