objects/Quote__c/recordTypes/Quote_Approved.recordType-meta.xml
<RecordType>
    <fullName>Quote_Approved</fullName>
    <active>true</active>
    <label>Quote Approved</label>
</RecordType>