objects/Quote__c/recordTypes/Quote_unApprove.recordType-meta.xml
<RecordType>
    <fullName>Quote_unApprove</fullName>
    <active>true</active>
    <label>Quote unApprove</label>
</RecordType>