objects/Quote__c/recordTypes/When_Quote_Approved.recordType-meta.xml
<RecordType>
    <fullName>When_Quote_Approved</fullName>
    <active>true</active>
    <label>When Quote Approved</label>
</RecordType>