objects/Quote__c/validationRules/Due_Date_cannot_be_before_Request_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_cannot_be_before_Request_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Request_Date__c   &gt;  Due_Date__c</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date cannot be before Request Date.</errorMessage>
</ValidationRule>